# 3DPopSynthesis

./: .gitignore  CMakeLists.txt  DiskModule.hpp  EvolutionModule.cpp  EvolutionModule.hpp  LICENSE  Makefile  NBodyModule.cpp  NBodyModule.hpp  POST_PROC.py  POST_PROCESS.py  POST_PROC_interactive.py  SYNTHESIS.py  SatelliteModule.cpp  Statistical_Convergence.py  cmd.py  combine.py  compile.sh  disk.py  disk_preproc.py  disk_preprocessing.py  get_earth_distances.py  get_metric_matrix.py  get_terr_distances.py  history.txt  listtest.py  load_pop.py  main.cpp  make.sh  options_backup.txt  plotting.py  pull_run.sh  push.sh  restart.sh  run.sh  run_euler.sh  run_new.sh  setup.sh  testing_post.py  tsne.py
CodeBase/: Commands.txt  DiskModule.cpp  DiskModule.h  DiskModule.hpp  EvolutionModule.cpp  EvolutionModule.h  EvolutionModule.hpp  Makefile  NBodyModule.cpp  NBodyModule.h  README.md  SatelliteModule.cpp  SatelliteModule.h  SatelliteModule.hpp  main.cpp
Other Files/: README.md  options_backup.txt
Post_Process/: README.md  __init__.py  main.py  plotter.py  run.py  satellite.py  snapshot.py  snapshots.py  testing.py  units.py
Pre_Process/: consistent_disk_model.py  disk.py  disk_preprocessing.py  plotting.py
Runtime_test/: analysis.py  create_options.py  disk.py  history.txt  options_template.txt  setup_runtime_test.py
Synthesis/: README.md  __init__.py  array_example  create_options.py  disk.py  functions.py  job_array.py  options.py  options_template.txt  setup.py  test.py  units.py
disks/: disk_1000.txt  disk_500.txt  disk_log_1000.txt  disk_log_1000_backup.txt  (+1 more)
(+481 files in other folders)
